--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -33,20 +33,17 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	//spring web, jpa
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
 	//jwt
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	implementation group: 'com.auth0', name: 'java-jwt', version: '3.1.0'
 
-	//mysql
-	implementation 'mysql:mysql-connector-java'
-
 	//validator
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	//devtools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 dependencyManagement {
